--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
     "react-quill": "^2.0.0",
